--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -32,14 +32,13 @@ AM_PROG_LIBTOOL
 
 
 
-
-PKG_CHECK_MODULES(OPENGL, gl)
-AC_SUBST(OPENGL_CFLAGS)
-AC_SUBST(OPENGL_LIBS)
-
 PKG_CHECK_MODULES(SDL, sdl >= 1.2.12)
 AC_SUBST(SDL_CFLAGS)
 AC_SUBST(SDL_LIBS)
+
+PKG_CHECK_MODULES(LIBXML, libxml-2.0)
+AC_SUBST(LIBXML_CFLAGS)
+AC_SUBST(LIBXML_LIBS)
 
 AC_OUTPUT([
 Makefile
